--- a/spongebob-boilerplate.html
+++ b/spongebob-boilerplate.html
@@ -75,6 +75,12 @@
 <script src="../third_party/three.js/VRControls.js"></script>
 <script src="../dist/three.ar.js"></script>
 
+<script src="https://threejs.org/examples/js/libs/inflate.min.js"></script>
+<script src="https://threejs.org/examples/js/loaders/FBXLoader.js"></script>
+<script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
+<script src="https://threejs.org/examples/js/Detector.js"></script>
+<script src="https://threejs.org/examples/js/libs/stats.min.js"></script>
+
 <script>
 
 var vrDisplay, vrControls, arView;
