try re-adding model

--- a/spongebob-boilerplate.html
+++ b/spongebob-boilerplate.html
@@ -86,7 +86,7 @@ var BOX_DISTANCE = 1.5;
 var BOX_SIZE = 0.25;
 var BOX_QUANTITY = 6;
 var boxesAdded = false;
-var modelAdded = true;
+var modelAdded = false;
 
 var mixers = [];
 
